
2010-May-22 Struan Robertson

	* QMRotor.cpp: Minor correction to improve agreement with classical results.
      * Update of Ethyl + H example with experimental numbers.

2010-May-21 Chi-Hsiu Liang

  * Update some changes to QM Hindered Rotor approximation.
  * Need a real system to test against the code.

2010-May-14 Chi-Hsiu Liang

  * Addition of MacOSX mesmer.test files in MesmerQA test projects.
  * Some progress on the QM Hindered Rotor approach.

2010-May-12 Chi-Hsiu Liang

  * modified the output path of mesmer_out.xml to make it clear.

2010-May-10 Dave Glowacki

      * changes to MakeFile and Hindered Rotor *.h files to get LINUX compilation working

2010-May-10 Dave Glowacki

      * System.cpp, make some changes to get correct behavior when RateCoefficientsOnly is specified
      * IrreversibleExchangeReaction.cpp & IrreversibleUnimolecularReaction.cpp: make changes for 
        correct behavior in the case of a negative barrier
      * MesmerTools.cpp, make changes to avoid numerical errors for QMrotor routines
      * LandauZenerCrossingCoeff.cpp, WKBCrossingCoeff.cpp, SimpleRRKM.cpp: changes to give correction
        behavior in the case that RRKM Crossing Coefficients are requested for reactions with a negative
        barrier
      * add HCCH_methylene.xml & HCCH_methylene.test in MesmerQA\spin_forbidden_kinetics

2010-April-25 Struan Robertson

	* System.h/.cpp, TMatrix.h: Addition of Gram-Schmidt analysis to Bartis-Widom calculation,
      to improve mass conservation.
      * Update of associated baselines.

2010-April-18 Struan Robertson

	* System.h/.cpp: Refactoring of the Bartis-Widom method.

2010-April-12 Struan Robertson

	* System.h/.cpp: Minor change to Bartis-Widom method.

2010-April101 Chris Morley

	* mesmer1.xsl: add facility to copy punchfile-like data from Firefox output
	
	* punchout.bat: script to use punch.xsl to make punch file, usable from
	SendTo menu.

2010-March-26 Chi-Hsiu Liang
